--- a/.github/workflows/gen-pack.yml
+++ b/.github/workflows/gen-pack.yml
@@ -33,3 +33,10 @@ jobs:
       with:
         name: ${{ steps.gen-pack.outputs.pack_file_name }}
         path: pack/${{ steps.gen-pack.outputs.pack_file_name }}/
+    
+    - name: タグがプッシュされたときにリリースを作成
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/') # タグがpushされたときのみに限定
+      with:
+        generate_release_notes: true
+        files: pack/*.zip
