--- a/.github/workflows/gen-release.yml
+++ b/.github/workflows/gen-release.yml
@@ -4,9 +4,14 @@ on:
   workflow_dispatch:
     inputs:
       tag:
-        description: '新バージョン'
+        type: choice
+        description: 'アップデートタイプ'
         required: true
-        default: 'b0.0.0'
+        options:
+          - major
+          - minor
+          - patch
+          - none
 
 jobs:
   run:
@@ -16,42 +21,32 @@ jobs:
       contents: write
 
     steps:
-    - name: トークンを生成
-      id: generate-token
-      uses: actions/create-github-app-token@v1
+    - name: nodeをセットアップ
+      uses: actions/setup-node@v4
       with:
-        app-id: ${{ vars.APP_ID }}
-        private-key: ${{ secrets.PRIVATE_KEY }}
-    
-    - name: GitHub App User IDを取得
-      id: get-user-id
-      env:
-        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
-      run: echo "user-id=$(gh api "/users/${{ steps.generate-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        node-version: 18
     
     - name: リポジトリをチェックアウト
       uses: actions/checkout@v4
     
     - name: Commiter等を設定
       run: |
-        git config --global user.name '${{ steps.generate-token.outputs.app-slug }}[bot]'
-        git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com'
-        git remote set-url origin https://github-actions:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git config --global push.followTags true
     
     - name: バージョンを書き換え
+      if: ${{ github.event.inputs.tag != 'none' }}
       run: |
-        tag=${{ github.event.inputs.tag }}
-        echo "tag=${tag}"
-        sed -i "s/PACK_VERSION=".*"/PACK_VERSION=\"${tag}\"/" gen-pack-config.sh
-        # sed -i "s/\(default:\) '.*' \(# AUTO-UPDATE\)/\1 '${tag}' \2/" .github/workflows/gen-release.yml
+        ./internal/set-pack-version.js ${{ github.event.inputs.tag }}
       shell: bash
     
     - name: コミットしタグ付きでプッシュ
+      if: ${{ github.event.inputs.tag != 'none' }}
       env:
-        GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git add gen-pack-config.sh # .github/workflows/gen-release.yml
+        git add manifest.json
         git commit -m 'パックバージョンを${{ github.event.inputs.tag }}に更新'
         git tag -a ${{ github.event.inputs.tag }} -m 'パックバージョン${{ github.event.inputs.tag }}'
         git push
@@ -59,7 +54,7 @@ jobs:
     - name: パックを生成
       id: gen-pack
       run: |
-        echo "pack_file_name=$(./gen-pack.sh)" | tee -a $GITHUB_OUTPUT
+        echo "pack_file_name=$(./internal/gen-pack.sh)" | tee -a $GITHUB_OUTPUT
       shell: bash
     
     - name: パックを解凍
@@ -67,7 +62,7 @@ jobs:
         cd pack
         unzip ${{ steps.gen-pack.outputs.pack_file_name }}.zip -d ${{ steps.gen-pack.outputs.pack_file_name }}
       shell: bash
-
+    
     - name: Artifactsにアップロード
       uses: actions/upload-artifact@v4
       with:
@@ -78,5 +73,5 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.event.inputs.tag }}
-        generate_release_notes: true
+        generate_release_notes: false
         files: pack/*.zip
