--- a/.github/workflows/set-pack-version.yml
+++ b/.github/workflows/set-pack-version.yml
@@ -18,7 +18,7 @@ jobs:
     - name: nodeをセットアップ
       uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: 20
 
     - name: リポジトリをチェックアウト
       uses: actions/checkout@v4
@@ -30,7 +30,7 @@ jobs:
 
     - name: バージョンを書き換え
       run: |
-        ./internal/set-pack-version.js ${{ github.event.inputs.tag }}
+        node internal/set-pack-version.js ${{ github.event.inputs.tag }}
       shell: bash
     
     - name: コミットしプッシュ
